fix for help button alignment on desktops

--- a/mla_game/front-end/scss/_gamefooter.scss
+++ b/mla_game/front-end/scss/_gamefooter.scss
@@ -117,6 +117,7 @@
       position:inherit;
       float:right;
       height:5.45em;
+      width:5.45em;
       svg {
         height:4em;
         width:4em;
